--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -60,7 +60,7 @@
             <div class="sac">
                 <p class="titulos_footer">Sac</p>
                 <div class="barra"></div>
-                <a href="tel:+5511983326043">(xx)xxxx-xxxx</a>
+                <a href="tel:+5511983326043">(11)4002-8922</a>
             </div> <!-- Substituir o numero depois -->
             <div class="logo_footer">
                 <img src="assets/img-site/logo_thermo-carry-2.png" alt="">
@@ -79,6 +79,7 @@
                 <a href="#">Cadastro</a>
                 <a href="#">Login</a>
                 <a href="#">Simulador financeiro</a>
+                <a href="assets/MANUAL DE INSTRUÇÃO.pdf" title="download" target="_blank">Manual de instrução</a>
             </div>
         </div>
     </footer>
