--- a/site/public/chamado.html
+++ b/site/public/chamado.html
@@ -16,7 +16,7 @@
         <div class="lateral">
             <img src=".//assets/img-site/logo_thermo-carry-2.png" alt="">
             <div class="navbar">
-                <span><a href="notificacoes.html">Notificação</a></span>
+                <!-- <span><a href="notificacoes.html">Notificação</a></span> -->
                 <span><a href="chamado.html">Chamado</a></span>
                 <span><a href="dashboard/dashboard.html">Dashboard</a></span>
                 <span id="sair"><a href="index.html">Sair</a></span>
